@@ -26,7 +26,7 @@
 
   <properties>
       <server.jvm.args>
-          ${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug}
+          ${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.jdk9}
       </server.jvm.args>
   </properties>
 
@@ -80,11 +80,6 @@
             <exclude>**/integration/*IntegrationTest.java</exclude>
             <!-- exclude tests which were run above using byteman scripts -->
             <exclude>**/recovery/CrashRecovery.java</exclude>
-            <!-- exclude tests which we don't want to run -->
-            <exclude>**/LastOnePhaseResource.java</exclude>
-            <exclude>**/DummyXARecoveryResource.java</exclude>
-            <exclude>**/TestSynchronization.java</exclude>
-            <exclude>**/TestXAResource.java</exclude>
           </excludes>
         </configuration>
       </plugin>
@@ -371,7 +366,6 @@
                     <plugin>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <skip>false</skip>
                             <systemPropertyVariables combine.children="append">
                                 <!--
                                     Used in arquillian.xml
@@ -388,7 +382,6 @@
                 </plugins>
             </build>
         </profile>
-
 	<profile>
 		<id>commitMarkableResourcePerf</id>
 		<dependencies>
@@ -464,5 +457,16 @@
         </plugins>
       </build>
     </profile>
+        <profile>
+            <id>j9</id>
+            <activation>
+                <jdk>[1.9,)</jdk>
+            </activation>
+            <properties>
+                <jvm.args.jdk9>
+                    --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
+                </jvm.args.jdk9>
+            </properties>
+        </profile>
   </profiles>
 </project>
